--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,10 @@ html.light .header._header-scroll {
   background-color: #d7dfae;
 }
 
+html.light .header__logo::before {
+  display: none;
+}
+
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -387,6 +391,10 @@ html.light .header._header-scroll {
   -webkit-transform: scaleX(1);
       -ms-transform: scaleX(1);
           transform: scaleX(1);
+}
+
+html.light .menu__body::before {
+  background-color: #dac39e;
 }
 
 html.light .menu__link:hover,
@@ -466,6 +474,7 @@ html.light .footer {
 }
 
 .items-contacts-footer__label {
+  text-align: center;
   font-weight: 700;
   font-size: 1rem;
   line-height: 1.125;
@@ -501,6 +510,7 @@ html.light .footer {
 
 .items-contacts-footer__link-tel {
   position: relative;
+  text-align: center;
   padding: 0.3125rem 0.3125rem;
   -webkit-transition: color 400ms cubic-bezier(0.4, 0, 0.2, 1);
   -o-transition: color 400ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -2179,7 +2189,6 @@ html.light .page__theme {
 
 .page__action {
   position: relative;
-  padding-left: 0.625rem;
 }
 
 .page__reset {
@@ -2924,6 +2933,11 @@ html.light .page__theme {
 }
 
 @media (max-width: 47.99875em) {
+  .header__container-big {
+    -ms-grid-columns: 11.875rem 1fr 0.0625rem auto;
+    grid-template-columns: 11.875rem 1fr 0.0625rem auto;
+  }
+
   .menu__body {
     position: fixed;
     width: 100%;
@@ -2984,6 +2998,10 @@ html.light .page__theme {
 
   .menu__link {
     font-size: 2.5rem;
+  }
+
+  html.light .menu__body {
+    background-color: #d7dfae;
   }
 
   .hero__icons {
@@ -3057,10 +3075,6 @@ html.light .page__theme {
     height: 1.375rem;
   }
 
-  .page__action {
-    padding-left: 0.4375rem;
-  }
-
   .page__reset.active {
     opacity: 0;
     visibility: hidden;
@@ -3080,9 +3094,20 @@ html.light .page__theme {
 }
 
 @media (max-width: 29.99875em) {
+  .header__container-big {
+    -ms-grid-columns: 9.375rem 1fr 0.0625rem auto;
+    grid-template-columns: 9.375rem 1fr 0.0625rem auto;
+  }
+
   .footer__main {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
+  }
+
+  .items-contacts-footer__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 
   .hero__titel {
